[tool.poetry]
name = "quash"
version = "0.1.0"
description = "quash API"
authors = ["Corey White <coreyjwhite@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
jsonschema = "^4.2.1"
marshmallow = "^3.14.1"
pingparsing = "^1.4.0"
PyYAML = "^6.0"
SQLAlchemy = "^1.4.27"
toml = "^0.10.2"
webargs = "^8.1.0"

[tool.poetry.dev-dependencies]
apispec = { extras = ["yaml"], version = "^5.1.1" }
black = "^21.10b0"
coverage = { extras = ["toml"], version = "^6.1.2" }
pytest = "^6.2.5"

[tool.poetry.urls]
api = "http://192.168.1.77:5000"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
